<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/custom_border"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center"
        android:text="@string/add_time"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnOneMin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_1_minute" />

    <Button
        android:id="@+id/btnTwoMin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_2_minutes" />

    <Button
        android:id="@+id/btnFiveMin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_5_minutes" />

    <Button
        android:id="@+id/btnTenMin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_10_minutes" />

    <Button
        android:id="@+id/btnCustomMin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/custom"
        android:visibility="invisible"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/etCustomMin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/number"
        android:inputType="textPersonName"
        android:visibility="invisible"
        tools:visibility="visible" />

    <Button
        android:id="@+id/btnEndWorkout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/end_workout" />
</LinearLayout>